--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="calculator">
+        <input type="text" id="input" value="" readonly>
+        <button id="block0">0</button>
+        <button id="block1">1</button>
+        <button id="block2">2</button>
+        <button id="block3">3</button>
+        <button id="block4">4</button>
+        <button id="block5">5</button>
+        <button id="block6">6</button>
+        <button id="block7">7</button>
+        <button id="block8">8</button>
+        <button id="block9">9</button>
+        <button id="plus">+</button>
+        <button id="minus">-</button>
+        <button id="multiply">*</button>
+        <button id="divide">/</button>
+        <button id="dot">.</button>
+        <button id="ans">=</button>
+        <button id="clr">C</button>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
